--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -27,7 +27,7 @@ jobs:
           cache-disabled: true
       - name: assemble release
         run:
-          ./gradlew -Prelease.releaseVersion=${{github.ref_name}} -Pversion=${{github.ref_name}} assemble
+          ./gradlew -Prelease.releaseVersion=${{github.event.release.name}} -Pversion=${{github.event.release.name}} assemble
       - name: hashes
         id: hashes
         run: |
@@ -38,13 +38,13 @@ jobs:
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
           path: 'build/distributions/besu*.tar.gz'
-          name: besu-${{ github.ref_name }}.tar.gz
+          name: besu-${{ github.event.release.name }}.tar.gz
           compression-level: 0
       - name: upload zipfile
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
           path: 'build/distributions/besu*.zip'
-          name: besu-${{ github.ref_name }}.zip
+          name: besu-${{ github.event.release.name }}.zip
           compression-level: 0
 
   testWindows:
@@ -99,4 +99,4 @@ jobs:
         env:
           ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY_USER }}
           ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY_TOKEN }}
-        run: ./gradlew -Prelease.releaseVersion=${{ github.ref_name }} -Pversion=${{github.ref_name}} artifactoryPublish
+        run: ./gradlew -Prelease.releaseVersion=${{ github.event.release.name }} -Pversion=${{github.event.release.name}} artifactoryPublish
