--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -168,7 +168,7 @@ dependencyManagement {
       entry 'ipa-multipoint'
     }
 
-    dependency 'org.hyperledger.besu:besu-verkle-trie:0.0.1-SNAPSHOT-POUI20'
+    dependency 'org.hyperledger.besu:besu-verkle-trie:0.0.1-SNAPSHOT-LOCAL'
 
     dependencySet(group: 'org.immutables', version: '2.10.0') {
       entry 'value-annotations'
