--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -74,6 +74,8 @@ jobs:
   publish:
     runs-on: ubuntu-22.04
     needs: testWindows
+    permissions:
+      contents: write
     steps:
       - name: Download archives
         uses: actions/download-artifact@eaceaf801fd36c7dee90939fad912460b18a1ffe
@@ -95,6 +97,15 @@ jobs:
     runs-on: ubuntu-22.04
     needs: artifacts
     steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: setup gradle
+        uses: gradle/actions/setup-gradle@9e899d11ad247ec76be7a60bc1cf9d3abbb9e7f1
+        with:
+          cache-disabled: true
       - name: Artifactory Publish
         env:
           ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY_USER }}
