--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -97,6 +97,8 @@ jobs:
     runs-on: ubuntu-22.04
     needs: artifacts
     steps:
+      - name: checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - name: Set up JDK 17
         uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93
         with:
