--- a/config/src/main/resources/profiles/enterprise-private.toml
+++ b/config/src/main/resources/profiles/enterprise-private.toml
@@ -6,3 +6,4 @@ tx-pool-no-local-priority=true
 tx-pool-limit-by-account-percentage=0.15
 rpc-http-max-active-connections=300
 min-gas-price=0
+Xbonsai-limit-trie-logs-enabled=false
