--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
       matrix:
         platform:
           - ubuntu-22.04
-          - [self-hosted, ARM64]
+          - besu-arm64
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Prepare
